--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     from GPS or radio triangulation) are inexact sciences—this service is
     provided without warranty or guarantee of accuracy.
     </p>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
     <script type="text/javascript" src="/static/js/modernizr-1.6.min.js"></script>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
     {% block extrafooter %}{% endblock %}
