--- a/templates/footprint.html
+++ b/templates/footprint.html
@@ -5,6 +5,7 @@
 {% block content %}
 <img src="{{ map_url|safe }}">
 <h2>Your representation</h2>
+{% if address %}<p>{{ address }}</p>{% endif %}
 <ul class="districts">
 {% for district in districts %}
   <li class="district">
