First pass at some styles

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@ $(function() {
   <input type="hidden" name="address">
 </form>
 
-<form action="/search/" method="get">
+<form action="/search/" method="get" id="search">
     <label>Address: <input name="q" id="q"></label> <input type="submit" value="Search">
 </form>
 {% endblock %}
