--- a/templates/base.html
+++ b/templates/base.html
@@ -3,17 +3,19 @@
   <head>
     <meta charset=utf-8>
     <title>{% block fulltitle %}Your Reps | {% block title %}Who represents you{% endblock %}{% endblock %}</title>
+    <link href='http://fonts.googleapis.com/css?family=Kreon|Cabin' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="/static/css/base.css">
   </head>
   <body>
-    {% block content %}{% endblock %}
-    <p id="caveat">NOTE: Geocoding (converting a street address to a
-    longitude/latitude point) and geolocating (determining your location
-    from GPS or radio triangulation) are inexact sciences—this service is
-    provided without warranty or guarantee of accuracy.
-    </p>
+    <header>
+      <h1>YourReps</h1>
+    </header>
+    <section id="main">
+      {% block content %}{% endblock %}
+    </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
     <script type="text/javascript" src="/static/js/modernizr-1.6.min.js"></script>
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
     {% block extrafooter %}{% endblock %}
     <script type="text/javascript">
       var _gaq = _gaq || [];
