--- a/templates/yourreps.html
+++ b/templates/yourreps.html
@@ -18,4 +18,9 @@
   </li>
 {% endfor %}
 </ul>
+<p id="caveat">NOTE: Geocoding (converting a street address to a
+longitude/latitude point) and geolocating (determining your location
+from GPS or radio triangulation) are inexact sciences—this service is
+provided without warranty or guarantee of accuracy.
+</p>
 {% endblock %}
