--- a/src/yourreps/templates/base.html
+++ b/src/yourreps/templates/base.html
@@ -1,10 +1,11 @@
+{% load static %}
 <!doctype html>
 <html>
   <head>
     <meta charset=utf-8>
     <title>{% block fulltitle %}Your Reps | {% block title %}Who represents you{% endblock %}{% endblock %}</title>
     <link href='http://fonts.googleapis.com/css?family=Kreon|Cabin' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="/static/css/base.css">
+    <link rel="stylesheet" type="text/css" href="{% get_static_prefix %}css/base.css">
   </head>
   <body>
     <header>
@@ -14,7 +15,7 @@
       {% block content %}{% endblock %}
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
-    <script type="text/javascript" src="/static/js/modernizr-1.6.min.js"></script>
+    <script type="text/javascript" src="{% get_static_prefix %}js/modernizr-1.6.min.js"></script>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
     {% block extrafooter %}{% endblock %}
     <script type="text/javascript">
