--- a/src/yourreps/templates/yourreps.html
+++ b/src/yourreps/templates/yourreps.html
@@ -18,7 +18,7 @@
   </li>
 {% endfor %}
 </ul>
-<p id="caveat">NOTE: Geocoding (converting a street address to a
+<p class="note">NOTE: Geocoding (converting a street address to a
 longitude/latitude point) and geolocating (determining your location
 from GPS or radio triangulation) are inexact sciences—this service is
 provided without warranty or guarantee of accuracy.
