--- a/src/yourreps/templates/base.html
+++ b/src/yourreps/templates/base.html
@@ -14,6 +14,11 @@
     <section id="main">
       {% block content %}{% endblock %}
     </section>
+    <footer>
+      <p>
+        Copyright 2011. Developed by <a href="http://pauladamsmith.com/">Paul Smith</a>.
+      </p>
+    </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
     <script type="text/javascript" src="{% get_static_prefix %}js/modernizr-1.6.min.js"></script>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
