Added Texas localization.

--- a/src/yourreps/templates/index.html
+++ b/src/yourreps/templates/index.html
@@ -35,8 +35,8 @@ $(function() {
   <ul>
     <li>Congressperson</li>
     <li>State Senator</li>
-    <li>General Assembly Delegate(s)</li>
-    <li>City Council member (Baltimore only)</li>
+    <li>General Assembly Delegate(s)/State Representative(s)</li>
+    <li>City Council member (Baltimore &amp; Houston only)</li>
   </ul>
 </div>
 <style>
