Added link to source on GH

--- a/src/yourreps/templates/base.html
+++ b/src/yourreps/templates/base.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset=utf-8>
     <title>{% block fulltitle %}Your Reps | {% block title %}Who represents you{% endblock %}{% endblock %}</title>
-    <link href='http://fonts.googleapis.com/css?family=Kreon|Cabin' rel='stylesheet' type='text/css'>
+    <link href="http://fonts.googleapis.com/css?family=Kreon|Cabin" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="{% get_static_prefix %}css/base.css">
   </head>
   <body>
@@ -16,7 +16,8 @@
     </section>
     <footer>
       <p>
-        Copyright 2011. Developed by <a href="http://pauladamsmith.com/">Paul Smith</a>.
+        © 2011. Created by <a href="http://pauladamsmith.com/">Paul Smith</a>.
+        <a href="http://github.com/paulsmith/yourreps" title="The code for this site is open source">Fork it on Github</a>.
       </p>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
